tests/machine/x/scala/outer_join.error
exit status 1
/workspace/mochi/tests/machine/x/scala/outer_join.scala:22: error: value id is not a member of Option[outer_join.Order]
          println(s"Order ${row.order.id} by ${row.customer.name} - $$${row.order.total}")
                                      ^
/workspace/mochi/tests/machine/x/scala/outer_join.scala:22: error: value name is not a member of Option[outer_join.Customer]
          println(s"Order ${row.order.id} by ${row.customer.name} - $$${row.order.total}")
                                                            ^
/workspace/mochi/tests/machine/x/scala/outer_join.scala:22: error: value total is not a member of Option[outer_join.Order]
          println(s"Order ${row.order.id} by ${row.customer.name} - $$${row.order.total}")
                                                                                  ^
/workspace/mochi/tests/machine/x/scala/outer_join.scala:24: error: value id is not a member of Option[outer_join.Order]
          println(s"Order ${row.order.id} by Unknown - $$${row.order.total}")
                                      ^
/workspace/mochi/tests/machine/x/scala/outer_join.scala:24: error: value total is not a member of Option[outer_join.Order]
          println(s"Order ${row.order.id} by Unknown - $$${row.order.total}")
                                                                     ^
/workspace/mochi/tests/machine/x/scala/outer_join.scala:27: error: value name is not a member of Option[outer_join.Customer]
        println(s"Customer ${row.customer.name} has no orders")
                                          ^
6 errors found
