tests/machine/x/scala/outer_join.scala
// Generated by Mochi compiler v0.10.27 on 1970-01-01T00:00:00Z
object _ {
  case class Customer(id: Int, name: String)
  case class Order(id: Int, customerId: Int, total: Int)
  case class Result(order: Option[Order], customer: Option[Customer])

  def _left_join[A,B](a: List[A], b: List[B])(cond: (A,B) => Boolean): List[(A, Option[B])] = for(x <- a) yield (x, b.find(y => cond(x,y)))

  def _outer_join[A,B](a: List[A], b: List[B])(cond: (A,B) => Boolean): List[(Option[A], Option[B])] = { val left = _left_join(a,b)(cond).map{ case(x,y) => (Some(x), y) }; val right = _right_join(a,b)(cond).collect{ case(None, r) => (None, Some(r)) }; left ++ right }

  def _right_join[A,B](a: List[A], b: List[B])(cond: (A,B) => Boolean): List[(Option[A], B)] = for(y <- b) yield (a.find(x => cond(x,y)), y)

  def main(args: Array[String]): Unit = {
    val customers = List(Customer(id = 1, name = "Alice"), Customer(id = 2, name = "Bob"), Customer(id = 3, name = "Charlie"), Customer(id = 4, name = "Diana"))
    val orders = List(Order(id = 100, customerId = 1, total = 250), Order(id = 101, customerId = 2, total = 125), Order(id = 102, customerId = 1, total = 300), Order(id = 103, customerId = 5, total = 80))
    val result = for { _pair0 <- _outer_join(orders, customers)((o,c) => o.customerId == (c.id).asInstanceOf[Int]); o = _pair0._1; c = _pair0._2 } yield Result(order = o, customer = c)
    println("--- Outer Join using syntax ---")
    for(row <- result) {
      if (row.order.nonEmpty) {
        if (row.customer.nonEmpty) {
          println(s"Order ${row.order.id} by ${row.customer.name} - $$${row.order.total}")
        } else {
          println(s"Order ${row.order.id} by Unknown - $$${row.order.total}")
        }
      } else {
        println(s"Customer ${row.customer.name} has no orders")
      }
    }
  }
}
